netbench/src/scenario/builder/snapshots/s2n_netbench__scenario__builder__tests__conn_checkpoints.snap
---
source: netbench/src/scenario/builder/tests.rs
expression: "scenario(|scenario|\n        {\n            let server = scenario.create_server();\n            scenario.create_client(|client|\n                    {\n                        client.connect_to(server,\n                            |conn|\n                                {\n                                    let (cp1_rx, cp1_tx) = conn.checkpoint();\n                                    conn.concurrently(|conn|\n                                            {\n                                                conn.open_send_stream(|local|\n                                                        {\n                                                            local.set_send_rate(10.kilobytes() / 50.millis());\n                                                            local.send(1.megabytes() / 2);\n                                                            local.unpark(cp1_tx);\n                                                            local.send(1.megabytes() / 2);\n                                                        },\n                                                    |peer|\n                                                        {\n                                                            peer.set_receive_rate(10.kilobytes() / 50.millis());\n                                                            peer.receive(1.megabytes());\n                                                        });\n                                            },\n                                        |conn|\n                                            {\n                                                conn.open_send_stream(|local|\n                                                        {\n                                                            local.park(cp1_rx);\n                                                            local.set_send_rate(1024.bytes() / 50.millis());\n                                                            local.send(1.megabytes());\n                                                        },\n                                                    |peer|\n                                                        {\n                                                            peer.set_receive_rate(1024.bytes() / 50.millis());\n                                                            peer.receive(1.megabytes());\n                                                        });\n                                            });\n                                });\n                    });\n        })"
---
{
  "id": "",
  "clients": [
    {
      "scenario": [
        {
          "connect": {
            "server_id": 0,
            "server_connection_id": 0,
            "client_connection_id": 0
          }
        }
      ],
      "connections": [
        {
          "ops": [
            {
              "scope": {
                "threads": [
                  [
                    {
                      "open_send_stream": {
                        "stream_id": 0
                      }
                    },
                    {
                      "send_rate": {
                        "stream_id": 0,
                        "bytes": 10000,
                        "period_ms": 50
                      }
                    },
                    {
                      "send": {
                        "stream_id": 0,
                        "bytes": 500000
                      }
                    },
                    {
                      "unpark": {
                        "checkpoint": 0
                      }
                    },
                    {
                      "send": {
                        "stream_id": 0,
                        "bytes": 500000
                      }
                    },
                    {
                      "send_finish": {
                        "stream_id": 0
                      }
                    }
                  ],
                  [
                    {
                      "open_send_stream": {
                        "stream_id": 1
                      }
                    },
                    {
                      "park": {
                        "checkpoint": 0
                      }
                    },
                    {
                      "send_rate": {
                        "stream_id": 1,
                        "bytes": 1024,
                        "period_ms": 50
                      }
                    },
                    {
                      "send": {
                        "stream_id": 1,
                        "bytes": 1000000
                      }
                    },
                    {
                      "send_finish": {
                        "stream_id": 1
                      }
                    }
                  ]
                ]
              }
            }
          ]
        }
      ],
      "certificate_authorities": [
        0
      ]
    }
  ],
  "servers": [
    {
      "connections": [
        {
          "peer_streams": [
            [
              {
                "receive_rate": {
                  "stream_id": 0,
                  "bytes": 10000,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 0,
                  "bytes": 1000000
                }
              },
              {
                "receive_finish": {
                  "stream_id": 0
                }
              }
            ],
            [
              {
                "receive_rate": {
                  "stream_id": 1,
                  "bytes": 1024,
                  "period_ms": 50
                }
              },
              {
                "receive": {
                  "stream_id": 1,
                  "bytes": 1000000
                }
              },
              {
                "receive_finish": {
                  "stream_id": 1
                }
              }
            ]
          ]
        }
      ],
      "private_key": 1,
      "certificate": 2,
      "certificate_authority": 0
    }
  ]
}
